tests/baselines/reference/downlevelLetConst11.errors.txt
tests/cases/compiler/downlevelLetConst11.ts(2,4): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/compiler/downlevelLetConst11.ts (1 errors) ====
    "use strict";
    let
       
!!! error TS1123: Variable declaration list cannot be empty.